@@ -3,8 +3,10 @@ Record the development activity
 v1.0
 
 -Adding folders and basic code.
--Added UI sample template for Add new employee. (Check UI\pages\UI\addEmp.html)
+-Added UI sample template for Add new employee.
 -Added initial single threaded server code in python.
 -Added get request instead of post.
 -Added code to insert data into mongodb.
--Removed hardcoded first name and last name in the URL
+-Removed hard coded first name and last name in the URL
+-Added code to send data to client to display on web page.
+-Implemented "AddEmp" operation. stub present for "SearchEmployee" operation.
